--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17,6 +17,25 @@ body {
     text-align: center;
 }
 
+.bg {
+  position: relative;
+}
+
+.bg::before {
+    display: block;
+    width: 100%;
+    height: 100%;
+    content: " ";
+    position: fixed;
+    background: url(../img/Bottle-logo.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    opacity: .3;
+    z-index: -1;
+}
+
 .HiddenCheckbox {
     display: none;
 }
@@ -27,7 +46,7 @@ body {
     top: 0;
     display: block;
     padding: 20px;
-    width: 90%;
+    width: 100%;
     height: 100%;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
