--- a/views/Admin/_header.html
+++ b/views/Admin/_header.html
@@ -5,8 +5,8 @@
     <title>管理画面</title>
     <link href="static/css/main.css" rel="stylesheet">
 </head>
-<script src="static/script/jquery-3.4.1.min.js"></script>
-<script src="static/script/index.js"></script>
+<script src="static/js/jquery-3.4.1.min.js"></script>
+<script src="static/js/index.js"></script>
 
 <body>
 <header><h1>SmartController</h1></header>
@@ -22,3 +22,4 @@
         </ul>
     </nav>
 </div>
+<div class="bg"></div>
