--- a/views/Admin/Status.html
+++ b/views/Admin/Status.html
@@ -1,4 +1,19 @@
 {% include "views/Admin/_header.html" %}
-<section id="main">
+<section id="status">
+    <div class="dt_box">
+        <div class="dt_header">
+            <div class="dt_col_1">Machine ID</div>
+            <div class="dt_col_2">Status</div>
+            <div class="dt_col_3"></div>
+        </div>
+        {% for item in data %}
+        <div class="dt_item">
+            <div class="dt_col_1">{{ item }}</div>
+            <div class="dt_col_2">{{ data[item]["status"] }}</div>
+
+            <div class="dt_col_3">Edit</div>
+        </div>
+        {% endfor %}
+    </div>
 </section>
 {% include "views/Admin/_footer.html" %}
