--- a/views/Admin/Buttons.html
+++ b/views/Admin/Buttons.html
@@ -14,9 +14,27 @@
             <div class="dt_col_2">{{ data[item]["name"] }}</div>
             <div class="dt_col_3">{{ data[item]["action"] }}</div>
             <div class="dt_col_4">{{ data[item]["sig"] }}</div>
-            <div class="dt_col_5">Edit</div>
+            <div class="dt_col_5">
+                Edit
+            </div>
         </div>
         {% endfor %}
+    </div>
+    <div class="edit_box">
+        <form name="edit_buttons" method="POST" action="SaveButtons" >
+            <div>
+                <label>Name : </label><input type="text" name="Name"/>
+            </div>
+            <div>
+                <label>Action : </label><input type="text" name="Action"/>
+            </div>
+            <div>
+                <label>Signal : </label><input type="text" name="Signal"/>
+            </div>
+            <div>
+                <input type="submit" value="Submit"/>
+            </div>
+        </form>
     </div>
 </section>
 {% include "views/Admin/_footer.html" %}
