--- a/views/Admin/_header.html
+++ b/views/Admin/_header.html
@@ -16,7 +16,7 @@
     <h2 class="MenuHeader">Menu</h2>
     <nav class="Menu">
         <ul class="Menu-list">
-            <li class="Menu-item"><a class="Menu-link" href="Home" target="_self">Home</a></li>
+            <li class="Menu-item"><a class="Menu-link" href="/" target="_self">Home</a></li>
             <li class="Menu-item"><a class="Menu-link" href="Buttons" target="_self">Buttons</a></li>
             <li class="Menu-item"><a class="Menu-link" href="Status" target="_self">Status</a></li>
         </ul>
