--- a/views/Admin/Status.html
+++ b/views/Admin/Status.html
@@ -1,4 +1,5 @@
 {% include "views/Admin/_header.html" %}
+<script src="static/js/status.js"></script>
 <section id="status">
     <div class="dt_box">
         <div class="dt_header">
@@ -11,9 +12,25 @@
             <div class="dt_col_1">{{ item }}</div>
             <div class="dt_col_2">{{ data[item]["status"] }}</div>
 
-            <div class="dt_col_3">Edit</div>
+            <div class="dt_col_3">
+                <button class="edit_btn">Edit</button>
+            </div>
         </div>
         {% endfor %}
+    </div>
+    <div class="edit_box">
+        <div class="edit_form">
+            <form name="edit_buttons" method="POST" action="SaveButtons" >
+                <label>Edit Machine ID : <span class="mchn_id"></span></label>
+                <div class="form_elem">
+                    <label>Status : </label><input class="ed_col_2" type="text" name="Name"/>
+                </div>
+                <div class="form_btn">
+                    <input type="submit" value="Submit"/>
+                    <input type="button" class="cancel_btn" value="Cancel"/>
+                </div>
+            </form>
+        </div>
     </div>
 </section>
 {% include "views/Admin/_footer.html" %}
