--- a/views/Admin/_header.html
+++ b/views/Admin/_header.html
@@ -17,8 +17,7 @@
     <nav class="Menu">
         <ul class="Menu-list">
             <li class="Menu-item"><a class="Menu-link" href="/" target="_self">Home</a></li>
-            <li class="Menu-item"><a class="Menu-link" href="Buttons" target="_self">Buttons</a></li>
-            <li class="Menu-item"><a class="Menu-link" href="Status" target="_self">Status</a></li>
+            <li class="Menu-item"><a class="Menu-link" href="Kaden" target="_self">Kaden</a></li>
         </ul>
     </nav>
 </div>
