--- a/views/Admin/Kaden.html
+++ b/views/Admin/Kaden.html
@@ -1,20 +1,20 @@
 {% include "views/Admin/_header.html" %}
-<script src="static/js/buttons.js"></script>
-<section id="buttons">
+<script src="static/js/kaden.js"></script>
+<section id="kaden">
     <div class="dt_box">
         <div class="dt_header">
             <div class="dt_col_1">Machine ID</div>
             <div class="dt_col_2">Name</div>
-            <div class="dt_col_3">Action</div>
-            <div class="dt_col_4">Signal</div>
+            <div class="dt_col_3">Status</div>
+<!--            <div class="dt_col_4">Signal</div>-->
             <div class="dt_col_5"></div>
         </div>
         {% for item in data %}
         <div class="dt_item">
             <div class="dt_col_1">{{ item }}</div>
             <div class="dt_col_2">{{ data[item]["name"] }}</div>
-            <div class="dt_col_3">{{ data[item]["action"] }}</div>
-            <div class="dt_col_4">{{ data[item]["sig"] }}</div>
+            <div class="dt_col_3">{{ data[item]["status"] }}</div>
+<!--            <div class="dt_col_4">{{ data[item]["signal"] }}</div>-->
             <div class="dt_col_5">
                 <button class="edit_btn">Edit</button>
             </div>
@@ -23,17 +23,18 @@
     </div>
     <div class="edit_box">
         <div class="edit_form">
-            <form name="edit_buttons" method="POST" action="SaveButtons" >
+            <form name="edit_buttons" method="POST" action="saveKaden" >
                 <label>Edit Machine ID : <span class="mchn_id"></span></label>
+                <input type="hidden" class="ed_col_1" name="id" value="">
                 <div class="form_elem">
-                    <label>Name : </label><input class="ed_col_2" type="text" name="Name"/>
+                    <label>Name : </label><input class="ed_col_2" type="text" name="name"/>
                 </div>
                 <div class="form_elem">
-                    <label>Action : </label><input class="ed_col_3" type="text" name="Action"/>
+                    <label>Status : </label><input class="ed_col_3" type="text" name="status"/>
                 </div>
-                <div class="form_elem">
-                    <label>Signal : </label><input class="ed_col_4" type="text" name="Signal"/>
-                </div>
+<!--                <div class="form_elem">-->
+<!--                    <label>Signal : </label><input class="ed_col_4" type="text" name="Signal"/>-->
+<!--                </div>-->
                 <div class="form_btn">
                     <input type="submit" value="Submit"/>
                     <input type="button" class="cancel_btn" value="Cancel"/>
