changed bottle to flask

--- a/templates/Admin/Home.html
+++ b/templates/Admin/Home.html
@@ -1,4 +1,4 @@
-{% include "views/Admin/_header.html" %}
+{% include "Admin/_header.html" %}
 <section id="main">
     <div>
 
@@ -10,4 +10,4 @@
 <!--        <img class="bottle_img" src="static/img/raspberry-pi-logo.png"/>-->
 <!--    </div>-->
 </section>
-{% include "views/Admin/_footer.html" %}
+{% include "Admin/_footer.html" %}
