--- a/templates/Admin/Kaden.html
+++ b/templates/Admin/Kaden.html
@@ -1,5 +1,5 @@
-{% include "views/Admin/_header.html" %}
-<script src="static/js/kaden.js"></script>
+{% include "Admin/_header.html" %}
+<script src="/static/js/kaden.js"></script>
 <section id="kaden">
     <div class="dt_box">
         <div class="dt_header">
@@ -43,4 +43,4 @@
         </div>
     </div>
 </section>
-{% include "views/Admin/_footer.html" %}
+{% include "Admin/_footer.html" %}
