--- a/templates/Admin/_header.html
+++ b/templates/Admin/_header.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>管理画面</title>
-    <link href="static/css/main.css" rel="stylesheet">
+    <link href="/static/css/main.css" rel="stylesheet">
 </head>
-<script src="static/js/jquery-3.4.1.min.js"></script>
-<script src="static/js/index.js"></script>
+<script src="/static/js/jquery-3.4.1.min.js"></script>
+<script src="/static/js/index.js"></script>
 
 <body>
 <header><h1>SmartController</h1></header>
